Updated Using Position

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
         </div>
         <div class="navbar__s3">
             <p>Course</p>
-            <p>My Learning</p>
+            <!--<p>My learning</p>-->
+            <div class="mylearning">
+                <p>My Learning</p>
+                <div class="mylearning__popup">
+                    <p>You did not purchase Anything</p>
+                </div>
+            </div>
             <i class="fa-solid fa-cart-shopping" style="color: #0d0d0d;"></i>
             <i class="fa-solid fa-bell" style="color: #00060f;"></i>
             <i class="fa-solid fa-user" style="color: #01060e;"></i>
@@ -52,8 +58,11 @@
     </div>
     <!--Sale Image-->
     <div class="sale-image">
-        <img src=./images/saleimage.png alt="sale image">
-
+        <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\saleimage.png" alt="sale image">
+        <div class="sale-image__offer">
+            <h2>Udemy Flash sale! 24hrs To Save</h2>
+            <p>Get the top course for Just 499. Juste one Day To Save But learn Lifetime To Learn</p>
+        </div>
     </div>
     <!--Recommended-->
     <div class="recommended">
@@ -61,7 +70,7 @@
         <p>Pick the best for you</p>
         <div class="recommended__container">
             <div class="course-card">
-                <img src="./images/C1.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C1.jpg">
                 <h3>2023 Python Data Visualization</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -69,7 +78,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./images/C2.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C2.jpg">
                 <h3>2023 Web Development Bootcamp</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -77,7 +86,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./images/C3.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C3.jpg">
                 <h3> C++ 2025 Bootcamp (Level zero - Expert)</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -85,7 +94,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./images/C4.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C4.jpg">
                 <h3>Data Science 2025 Beginner - Expert</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -118,7 +127,7 @@
         <p class="popular__subtitle">Pick the best fit</p>
         <div class="popular__container">
             <div class="course-card">
-                <img src="./images/C1.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C1.jpg">
                 <h3>2023 Python Data Visualization</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -126,7 +135,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./images/C2.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C2.jpg">
                 <h3>2023 Web Development Bootcamp</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -134,7 +143,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./images/C3.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C3.jpg">
                 <h3> C++ 2025 Bootcamp (Level zero - Expert)</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -142,14 +151,14 @@
             </div>
 
             <div class="course-card">
-                <img src="./images/C4.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C4.jpg">
                 <h3>Data Science 2025 Beginner - Expert</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
                 <p>499 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="./images/C1.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C1.jpg">
                 <h3>2023 Python Data Visualization</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -157,7 +166,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./images/C2.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C2.jpg">
                 <h3>2023 Web Development Bootcamp</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -165,7 +174,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./images/C3.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C3.jpg">
                 <h3> C++ 2025 Bootcamp (Level zero - Expert)</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -173,7 +182,7 @@
             </div>
 
             <div class="course-card">
-                <img src="./images/C4.jpg">
+                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C4.jpg">
                 <h3>Data Science 2025 Beginner - Expert</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -192,16 +201,16 @@
                 <p>Contact Us</p>
             </div>
             <div class="footer__one__s2">
-<p>Carrier</p>
-<p>Blog</p>
-<p>Help & Support</p>
-<p>Affiliate</p>
-<p>Investors</p>
+                <p>Carrier</p>
+                <p>Blog</p>
+                <p>Help & Support</p>
+                <p>Affiliate</p>
+                <p>Investors</p>
             </div>
         </div>
         <div class="footer__two">
-<h1>Udemy</h1>
-<p> &copy; Udemy, Inc </p>
+            <h1>Udemy</h1>
+            <p> &copy; Udemy, Inc </p>
         </div>
     </div>
 </body>
