Adjusted sale image

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
     <!--Sale Image-->
     <div class="sale-image">
-        <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\saleimage.png" alt="sale image">
+        <img src="Images/saleimage.png" alt="sale image">
         <div class="sale-image__offer">
             <h2>Udemy Flash sale! 24hrs To Save</h2>
             <p>Get the top course for Just 499. Juste one Day To Save But learn Lifetime To Learn</p>
