--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <p>Pick the best for you</p>
         <div class="recommended__container">
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C1.jpg">
+                <img src="Images/C1.jpg">
                 <h3>2023 Python Data Visualization</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -78,7 +78,7 @@
             </div>
 
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C2.jpg">
+                <img src="Images/C2.jpg">
                 <h3>2023 Web Development Bootcamp</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -86,7 +86,7 @@
             </div>
 
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C3.jpg">
+                <img src="Images/C3.jpg">
                 <h3> C++ 2025 Bootcamp (Level zero - Expert)</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -94,7 +94,7 @@
             </div>
 
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C4.jpg">
+                <img src="Images/C4.jpg">
                 <h3>Data Science 2025 Beginner - Expert</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -127,7 +127,7 @@
         <p class="popular__subtitle">Pick the best fit</p>
         <div class="popular__container">
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C1.jpg">
+                <img src="Images/C1.jpg">
                 <h3>2023 Python Data Visualization</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -135,7 +135,7 @@
             </div>
 
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C2.jpg">
+                <img src="Images/C2.jpg">
                 <h3>2023 Web Development Bootcamp</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C3.jpg">
+                <img src="Images/C3.jpg">
                 <h3> C++ 2025 Bootcamp (Level zero - Expert)</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -151,14 +151,14 @@
             </div>
 
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C4.jpg">
+                <img src="Images/C4.jpg">
                 <h3>Data Science 2025 Beginner - Expert</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
                 <p>499 <del>1999</del></p>
             </div>
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C1.jpg">
+                <img src="Images/C1.jpg">
                 <h3>2023 Python Data Visualization</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -166,7 +166,7 @@
             </div>
 
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C2.jpg">
+                <img src="Images/C2.jpg">
                 <h3>2023 Web Development Bootcamp</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -174,7 +174,7 @@
             </div>
 
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C3.jpg">
+                <img src="Images/C3.jpg">
                 <h3> C++ 2025 Bootcamp (Level zero - Expert)</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
@@ -182,7 +182,7 @@
             </div>
 
             <div class="course-card">
-                <img src="C:\Users\Naveen kumar\Desktop\FSWD\css\udemyclone\Images\C4.jpg">
+                <img src="Images/C4.jpg">
                 <h3>Data Science 2025 Beginner - Expert</h3>
                 <p>Col Steel</p>
                 <p>4.9⭐⭐⭐⭐</p>
