--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <i class="fa-solid fa-user" style="color: #01060e;"></i>
 
         </div>
+        <div class="navbar__s4">
+            <i class="fa-solid fa-bars"></i>
+        </div>
     </div>
     <!--Catagories-->
     <div class="catagories">
